infra/storage/longhorn/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: longhorn-ui-route
  namespace: longhorn-system
spec:
  parentRefs:
    - name: internal
      namespace: gateway
  hostnames:
    - "longhorn.vanillax.me"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: longhorn-frontend
          port: 80
